# sr

./: .gitattributes  .gitignore  .urmzd.sr.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  action.yml  deny.toml  install.sh  llms.txt  sr.yaml  teasr.toml
.githooks/: commit-msg  commit-msg.bak  pre-commit
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  ci.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/docs/: migration.md
crates/cli/src/: examples.rs  main.rs
crates/cli/templates/: cargo-single.yaml  go.yaml  multi-language.yaml  npm-single.yaml  pnpm-workspace.yaml  uv-workspace.yaml
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: changelog.rs  config.rs  diff.rs  error.rs  hooks.rs  lib.rs  native_git.rs  publish.rs  release.rs  workspaces.rs
crates/core/src/git/: mod.rs
crates/core/src/publishers/: cargo.rs  custom.rs  docker.rs  go.rs  mod.rs  npm.rs  pypi.rs
crates/core/src/stages/: build.rs  bump.rs  commit.rs  hooks.rs  mod.rs  publish.rs  push.rs  tag.rs  upload.rs  validate.rs  vcs_release.rs  verify.rs
crates/sr-ai/: Cargo.toml  README.md
crates/sr-ai/src/: error.rs  lib.rs  prompts.rs
crates/sr-ai/src/ai/: claude.rs  copilot.rs  gemini.rs  mod.rs
crates/sr-ai/src/cache/: fingerprint.rs  mod.rs  store.rs
crates/sr-ai/src/commands/: ask.rs  branch.rs  cache.rs  commit.rs  explain.rs  mod.rs  pr.rs  rebase.rs  review.rs
crates/sr-ai/src/git/: mod.rs
crates/sr-ai/src/prompts/ask/: system.txt
crates/sr-ai/src/prompts/branch/: system.txt
crates/sr-ai/src/prompts/commit/: patch.txt.j2  schema.json  system.txt.j2  user.txt.j2
crates/sr-ai/src/prompts/explain/: system.txt
crates/sr-ai/src/prompts/pr/: schema.json  system.txt
crates/sr-ai/src/prompts/rebase/: schema.json  system.txt.j2  user.txt.j2
crates/sr-ai/src/prompts/review/: system.txt
crates/sr-ai/src/ui/: mod.rs
crates/sr-cli/: Cargo.toml  README.md
crates/sr-cli/docs/: migration.md
crates/sr-cli/src/: main.rs
crates/sr-cli/src/commands/: commit.rs  mcp.rs  mod.rs  pr.rs  rebase.rs  review.rs  worktree.rs
crates/sr-core/: CHANGELOG.md  Cargo.toml  README.md
crates/sr-core/src/: changelog.rs  commit.rs  config.rs  error.rs  git.rs  github.rs  hook_cache.rs  hooks.rs  lib.rs  manifest.rs  native_git.rs  release.rs  version.rs  version_files.rs
crates/sr-core/src/git/: mod.rs
crates/sr-core/src/stages/: build.rs  bump.rs  commit.rs  hooks.rs  manifest.rs  mod.rs  push.rs  upload.rs  validate.rs  vcs_release.rs  verify.rs
crates/sr-git/: Cargo.toml  README.md
crates/sr-git/src/: lib.rs
crates/sr-git/tests/: integration.rs
crates/sr-github/: Cargo.toml  README.md
crates/sr-github/src/: lib.rs
docs/: FAQ.md  migration-3x-4x.md  migration.md
examples/: README.md  cargo-single.yaml  cargo-workspace.yaml  custom.yaml  docker.yaml  go.yaml  multi-language.yaml  npm-single.yaml  npm-workspace.yaml  pnpm-workspace.yaml  uv-workspace.yaml
examples/ci/: README.md  cargo-multi-platform.yml  cargo-single.yml  docker.yml  npm.yml  pnpm-workspace.yml  uv-workspace.yml
scripts/: download-sr.sh
skills/semantic-release/: SKILL.md
skills/sr/: SKILL.md
