[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "2.4.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/urmzd/sr"
authors = ["urmzd"]
homepage = "https://github.com/urmzd/sr"

[workspace.dependencies]
# Internal crates
sr-core = { path = "crates/sr-core", version = "2.4.0" }
sr-git = { path = "crates/sr-git", version = "2.4.0" }
sr-github = { path = "crates/sr-github", version = "2.4.0" }
sr-ai = { path = "crates/sr-ai", version = "2.4.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"

# Regex
regex = "1"

# Versioning
semver = { version = "1", features = ["serde"] }

# Templating
minijinja = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Serialization (JSON)
serde_json = "1"
toml_edit = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
ureq = { version = "3", features = ["json"] }

# Encoding
base64 = "0.22"

# Globbing
glob = "0.3"

# Hashing
sha2 = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Terminal UI
crossterm = "0.28"
indicatif = "0.17"

# Async traits
async-trait = "0.1"

# Directories
dirs = "6"

# Testing
tempfile = "3"
