[package]
name = "sr-ai"
version = "2.4.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "AI backends, caching, and AI-powered git commands for sr"
readme = "README.md"
keywords = ["semantic-release", "ai", "git", "conventional-commits"]
categories = ["development-tools"]

[dependencies]
sr-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
crossterm = { workspace = true }
indicatif = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
