[package]
name = "sr-cli"
version = "1.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "CLI binary for semantic-release"
readme = "README.md"
keywords = ["semantic-release", "versioning", "changelog", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sr"
path = "src/main.rs"

[dependencies]
sr-core = { workspace = true }
sr-git = { workspace = true }
sr-github = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
serde_yaml_ng = { workspace = true }
serde_json = { workspace = true }
