[package]
name = "sr-core"
version = "1.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Pure domain logic for semantic-release"
readme = "README.md"
keywords = ["semantic-release", "versioning", "changelog", "conventional-commits"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
semver = { workspace = true }
regex = { workspace = true }
minijinja = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml_edit = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
