[package]
name = "sr-git"
version = "1.4.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Git operations for semantic-release (native git CLI)"
readme = "README.md"
keywords = ["semantic-release", "git", "versioning"]
categories = ["development-tools"]

[dependencies]
sr-core = { workspace = true }
semver = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
