[package]
name = "sr-github"
version = "2.4.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "GitHub VCS provider for sr"
readme = "README.md"
keywords = ["semantic-release", "github", "release"]
categories = ["development-tools"]

[dependencies]
sr-core = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
